gcc/testsuite/g++.dg/cpp0x/pr32566.C
// { dg-options "-std=c++11" }
template<int...> struct A;

template<template<int> class... T> struct A<T...> {}; // { dg-error "mismatch|expected" }
